--- a/styles/_breakpoints.scss
+++ b/styles/_breakpoints.scss
@@ -8,3 +8,4 @@ $breakpoint-medium: 1024px;
 $breakpoint-large: 1280px;
 $breakpoint-extra-large: 1440px;
 $breakpoint-ultra-large: 1920px;
+$breakpoint-xultra-large: 2500px;
